<resources>
    <string name="app_name">HPToy</string>
    <string name="ble_device_name">HPToyPeripheral</string>
    <string name="ble_device_name_1">PDV21Peripheral</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="bluetooth_scan_permission_required">Bluetooth scan permission is required.</string>
    <string name="bluetooth_connect_permission_required">Bluetooth connect permission is required.</string>

    <string name="demo_mode">Demo mode!</string>
    <string name="connecting">Connecting&#8230;</string>
    <string name="connected">Connected!</string>
    <string name="unknown_device">Unknown device</string>
    <string name="energy_sync">Energy manager is syncronized.</string>

    <string name="discovery_info">
        Сlicking on the icon opens the discovery menu window.
        This window shows all available online HP Toy devices, which you may choose to control.
        Also you can rename UUID number for any simple name in the Settings/Name menu.
    </string>
    <string name="audio_source_info">
        If the USB input selected, the amp is ready for 16-24/44.1-192 USB high-res audio,
        and after USB-host is off, it will be auto-switched to standby.
        If selected AUTO, after USB-host is off, the amp will be auto-switched to AUX input.
        AUX input could be either optical SPDIF or BT aptx stream, depends on which option is installed.
        After 5 minutes AUX input level less than Auto-Off threshold, the amp goes to standby.
        The wakeup event could be smartphone app connecting or USB-host On.
    </string>
    <string name="volume_info">The slider adjusts hardware volume.
        Also you can tap on the number to enter values from keyboard.</string>
    <string name="bass_treble_info">Classical HiFi knobs implemented with shelving filters.</string>
    <string name="loudness_info">
        Fletcher-Munson loudness curves are implemented.
        You can control the Loudness boost frequency and Dry/Wet slider position defines less/more effect.
    </string>
    <string name="filters_info"> Filters let you fully control up to 7 Biquads:
        Parametric EQs, All-pass Filters, Text biquad mode, LPF and HPF, both are Butterworth 2 or 4 order.
        PEQ On/Off button bypassing PEQ\'s and All-pass Filters.
    </string>
    <string name="compressor_info">Flexible Compressor/Expander dynamic range control.
        Required some basic understanding to modify parameters successfully.
    </string>
    <string name="presets_info">List of all user and imported presets.
        You can share all presets to other users.</string>
    <string name="save_info">Saving all settings as a preset file.</string>
    <string name="settings_info">This menu provides basic functions:\n
        <i> - rename UUID number for any simple name;\n - change pairing code;\n
            - adjust the clip threshold;\n - select output type;\n - select advertise mode;\n
            - restore factory settings</i>.</string>

    <string name="right_arrow">\u232A</string>

    <string name="auto_off_title">Clip threshold</string>

    <string name="fileprovider_authority">com.hptoy.fileprovider</string>
    <string name="export_extra_subject">Preset from HPToy</string>

    <string name="balance_warning">Please be careful.
        Using unbalance headphone with PDV2 in balance mode is dangerous.
        Are you sure want to set balance output mode?</string>

    <string-array name="inputtype">
        <item name="gui">GUI</item>
        <item name="text">TEXT</item>
    </string-array>

    <string-array name="preset_type_strings">
        <item name="preset_type_user">User</item>
        <item name="preset_type_official">Official</item>
    </string-array>
</resources>
